--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,11 @@
 /* 1. Theme default css */
 /* line 5, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 body {
-  font-family: "Poppins", sans-serif;
-  font-weight: normal;
-  font-style: normal;
+  line-height: 1.7;
+  color: #6D6E70;
+  font-weight: 300;
+  font-size: 1rem;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* line 12, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
@@ -72,10 +74,15 @@ button {
 }
 
 /* line 39, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
-h1, h2, h3, h4, h5 {
-  font-family: "Poppins", sans-serif;
-  color: #001D38;
+h1, h2, h3 {
+  color: #000000;
+  font-weight: 600;
 }
+
+h4, h5 {
+  color: #000000;
+}
+
 
 /* line 43, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 h1 a,
@@ -100,13 +107,13 @@ li {
 
 /* line 59, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 p {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 28px;
-  color: #4D4D4D;
-  margin-bottom: 13px;
-  font-family: "Poppins", sans-serif;
+  line-height: 1.7;
+  color: #6D6E70;
+  font-weight: 400;
+  font-size: 1rem;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
 
 /* line 68, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 label {
@@ -325,7 +332,7 @@ h3 {
   line-height: 40px;
   background: #FFFFFF;
   left: -20px;
-  color: #FF3414 !important;
+  color: #ED1B2E !important;
 }
 
 /* line 247, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
@@ -355,7 +362,7 @@ h3 {
 /* line 272, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 .owl-carousel:hover .owl-nav div:hover {
   color: #fff !important;
-  background: #FF3414;
+  background: #ED1B2E;
 }
 
 /* line 281, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
@@ -437,7 +444,7 @@ h3 {
   height: 100%;
   padding: 20px;
   color: #fff;
-  background: #FF3414;
+  background: #ED1B2E;
   display: inline-block;
   border: none;
   line-height: 50px;
@@ -452,23 +459,23 @@ h3 {
   color: #131313;
   display: inline-block;
   padding: 18px 44px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #FF3414;
+  border: 1px solid #ED1B2E;
   letter-spacing: 3px;
   text-align: center;
-  color: #FF3414 !important;
+  color: #ED1B2E !important;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 /* line 17, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .boxed-btn:hover {
-  background: #FF3414;
+  background: #ED1B2E;
   color: #fff !important;
-  border: 1px solid #FF3414;
+  border: 1px solid #ED1B2E;
 }
 
 /* line 22, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
@@ -483,12 +490,12 @@ h3 {
 
 /* line 29, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .boxed-btn3 {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#FF3414+0,fd8e5e+100 */
-  background: #FF3414;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ED1B2E+0,fd8e5e+100 */
+  background: #ED1B2E;
   color: #fff;
   display: inline-block;
   padding: 18px 42px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
   font-weight: 500;
   border: 0;
@@ -505,9 +512,9 @@ h3 {
 
 /* line 47, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .boxed-btn3:hover {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#FF3414+0,fd8e5e+100 */
-  color: #FF3414 !important;
-  border: 1px solid #FF3414;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ED1B2E+0,fd8e5e+100 */
+  color: #ED1B2E !important;
+  border: 1px solid #ED1B2E;
   background: transparent;
 }
 
@@ -526,7 +533,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 13px 27px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 14px;
   font-weight: 400;
   border: 0;
@@ -569,14 +576,14 @@ h3 {
 
 /* line 95, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .boxed-btn3-line {
-  color: #FF3414 !important;
+  color: #ED1B2E !important;
   display: inline-block;
   padding: 14px 31px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #FF3414;
+  border: 1px solid #ED1B2E;
   text-align: center;
   text-transform: capitalize;
   -webkit-transition: 0.5s;
@@ -591,7 +598,7 @@ h3 {
 .boxed-btn3-line:hover {
   color: #fff !important;
   border: 1px solid transparent;
-  background: #FF3414;
+  background: #ED1B2E;
 }
 
 /* line 115, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
@@ -610,7 +617,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 18px 24px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 14px;
   font-weight: 400;
   border: 0;
@@ -777,12 +784,12 @@ h3 {
 /* line 28, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 32, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav a.active {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 @media (max-width: 767px) {
@@ -1055,7 +1062,7 @@ h3 {
 
 /* line 115, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .main-header-area .Appointment .book_btn a {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#FF3414+0,fd8e5e+100 */
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ED1B2E+0,fd8e5e+100 */
   background: #fdae5c;
   /* Old browsers */
   background: -moz-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
@@ -1064,7 +1071,7 @@ h3 {
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #fdae5c 0%, #fd8e5e 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FF3414', endColorstr='#fd8e5e',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ED1B2E', endColorstr='#fd8e5e',GradientType=0 );
   /* IE6-9 */
   padding: 13px 26px;
   font-size: 14px;
@@ -1085,7 +1092,7 @@ h3 {
 
 /* line 133, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .main-header-area .Appointment .book_btn a:hover {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#FF3414+0,fd8e5e+100 */
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ED1B2E+0,fd8e5e+100 */
   background: #fdae5c;
   /* Old browsers */
   background: -moz-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
@@ -1094,7 +1101,7 @@ h3 {
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #fdae5c 0%, #fd8e5e 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FF3414', endColorstr='#fd8e5e',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ED1B2E', endColorstr='#fd8e5e',GradientType=0 );
   /* IE6-9 */
 }
 
@@ -1118,7 +1125,7 @@ h3 {
   font-weight: 400;
   display: inline-block;
   padding: 0px 0px 0px 0px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   position: relative;
   text-transform: capitalize;
 }
@@ -1158,7 +1165,7 @@ h3 {
 
 /* line 214, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 218, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
@@ -1293,7 +1300,7 @@ h3 {
 
 /* line 332, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .header-top_area .social_media_links a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 338, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
@@ -1338,7 +1345,7 @@ h3 {
 
 /* line 362, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .header-top_area .short_contact_list ul li a i {
-  color: #FF3414;
+  color: #ED1B2E;
   margin-right: 7px;
 }
 
@@ -1352,7 +1359,7 @@ h3 {
 .header-area .search_btn a {
   width: 35px;
   height: 35px;
-  background: #FF3414;
+  background: #ED1B2E;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -1459,7 +1466,7 @@ h3 {
 
 /* line 59, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_slider.scss */
 .slider_area .single_slider .slider_text h3 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 60px;
   text-transform: capitalize;
   letter-spacing: 0;
@@ -1914,7 +1921,7 @@ h3 {
 
 /* line 15, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_counter.scss */
 .counter_area .single_counter h3 {
-  color: #FF3414;
+  color: #ED1B2E;
   font-weight: 500;
   font-size: 46px;
   margin-bottom: 5px;
@@ -2237,7 +2244,7 @@ h3 {
 
 /* line 81, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_testmonial.scss */
 .testimonial_area .owl-dots .owl-dot.active {
-  background: #FF3414;
+  background: #ED1B2E;
 }
 
 /* line 89, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_testmonial.scss */
@@ -2386,7 +2393,7 @@ h3 {
 .service_details_area .service_details_left .nav a.active, .service_details_area .service_details_left .nav a .nav-pills > a {
   color: #fff;
   background-color: transparent;
-  color: #FF3414;
+  color: #ED1B2E;
   font-size: 16px;
 }
 
@@ -2636,7 +2643,7 @@ h3 {
 /* line 112, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_contact_action.scss */
 .chose_area .about_image:before {
   position: absolute;
-  background: #FF3414;
+  background: #ED1B2E;
   right: -25px;
   bottom: -25px;
   content: '';
@@ -3350,7 +3357,7 @@ h3 {
   right: 12px;
   height: auto;
   font-family: 'themify';
-  color: #FF3414;
+  color: #ED1B2E;
   font-size: 14px;
   left: -24px;
 }
@@ -3537,7 +3544,7 @@ h3 {
   text-decoration: none;
   border-color: transparent;
   box-shadow: none;
-  color: #FF3414 !important;
+  color: #ED1B2E !important;
 }
 
 /* line 1, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_prise_slider.scss */
@@ -3906,14 +3913,16 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 /* line 23, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_transport.scss */
 .transportaion_area .single_transport p {
   font-size: 16px;
-  font-weight: 400;
   line-height: 28px;
-  color: #919191;
 }
 
 /* line 30, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_transport.scss */
 .transportaion_area .single_transport:hover h3 {
-  color: #FF3414;
+  color: #ED1B2E;
+}
+
+.transportaion_area .single_transport:hover h4 {
+  color: #ED1B2E;
 }
 
 /* line 1, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_gallery.scss */
@@ -4810,7 +4819,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 49, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget p a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 55, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
@@ -4830,8 +4839,8 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 64, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget p.footer_text a.domain:hover {
-  color: #FF3414;
-  border-bottom: 1px solid #FF3414;
+  color: #ED1B2E;
+  border-bottom: 1px solid #ED1B2E;
 }
 
 /* line 70, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
@@ -4842,8 +4851,8 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 74, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget p.footer_text.doanar a:hover {
-  color: #FF3414;
-  border-bottom: 1px solid #FF3414;
+  color: #ED1B2E;
+  border-bottom: 1px solid #ED1B2E;
 }
 
 /* line 78, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
@@ -4866,7 +4875,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 93, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .footer_top .footer_widget ul li a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 99, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
@@ -4909,7 +4918,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
   border: none;
   font-size: 14px;
   color: #fff;
-  background: #FF3414;
+  background: #ED1B2E;
   padding: 10px;
   padding: 0 22px;
   cursor: pointer;
@@ -4954,7 +4963,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 161, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .copy-right_text .copy_right a {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 166, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
@@ -4997,7 +5006,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 /* line 190, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .socail_links ul li a:hover {
   color: #fff !important;
-  background: #FF3414;
+  background: #ED1B2E;
   border-color: transparent;
 }
 
@@ -5013,6 +5022,10 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 .bradcam_bg_3 {
   background-image: url(../img/banner/indonesia-eq-mm-1.jpg);
+}
+
+.bradcam_bg_4 {
+  background-image: url(../img/banner/indonesia-eq.jpg);
 }
 
 /* line 7, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_bradcam.scss */
@@ -5061,7 +5074,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 .bradcam_area h3 {
   font-size: 60px;
   color: #fff;
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: 0;
   text-transform: capitalize;
 }
@@ -5496,7 +5509,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 50, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_service.scss */
 .service_area .single_service:hover .service_info h3 a {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 57, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_service.scss */
@@ -6254,28 +6267,28 @@ h6 {
 /* line 297, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
 .genric-btn.danger {
   color: #fff;
-  background: #f44a40;
+  background: #004B79;
   border: 1px solid transparent;
 }
 
 /* line 301, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
 .genric-btn.danger:hover {
-  color: #f44a40;
-  border: 1px solid #f44a40;
+  color: #004B79;
+  border: 1px solid #004B79;
   background: #fff;
 }
 
 /* line 307, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
 .genric-btn.danger-border {
-  color: #f44a40;
-  border: 1px solid #f44a40;
+  color: #004B79;
+  border: 1px solid #004B79;
   background: #fff;
 }
 
 /* line 311, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
 .genric-btn.danger-border:hover {
   color: #fff;
-  background: #f44a40;
+  background: #004B79;
   border: 1px solid transparent;
 }
 
@@ -7277,7 +7290,7 @@ h6 {
 
 /* line 14, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
 .blog_area a:hover, .blog_area a :hover {
-  background: -webkit-linear-gradient(131deg, #FF3414 0%, #FF3414 99%);
+  background: -webkit-linear-gradient(131deg, #ED1B2E 0%, #ED1B2E 99%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-decoration: none;
@@ -7788,7 +7801,7 @@ h6 {
 
 /* line 544, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
 .blog_details a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 549, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
@@ -7856,7 +7869,7 @@ h6 {
   left: 10px;
   display: block;
   color: #fff;
-  background-color: #FF3414;
+  background-color: #ED1B2E;
   padding: 8px 15px;
   border-radius: 5px;
 }
@@ -8084,7 +8097,7 @@ h6 {
 
 /* line 842, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-  background: #FF3414;
+  background: #ED1B2E;
   color: #fff !important;
   -webkit-text-fill-color: #fff;
   text-decoration: none;
@@ -8332,7 +8345,7 @@ h6 {
 
 /* line 1208, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
 .single-post-area .blog-author a:hover {
-  color: #FF3414;
+  color: #ED1B2E;
 }
 
 /* line 1213, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog.scss */
@@ -8761,7 +8774,7 @@ h6 {
 
 /* line 72, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_blog_part.scss */
 .blog_part .single-home-blog .card .card-body a {
-  color: #FF3414;
+  color: #ED1B2E;
   text-transform: uppercase;
   -webkit-transition: 0.8s;
   transition: 0.8s;
@@ -8788,7 +8801,7 @@ h6 {
   height: 10px;
   top: 5px;
   left: 0;
-  background-color: #FF3414;
+  background-color: #ED1B2E;
   border-radius: 50%;
 }
 
