--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ p {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+p-footnote {
+  line-height: 1.7;
+  color: #6D6E70;
+  font-weight: 400;
+  font-size: .75rem;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 
 /* line 68, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/theme-default.scss */
 label {
@@ -661,27 +668,27 @@ h3 {
 
 /* line 159, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .line-button:hover {
-  color: #009DFF;
+  color: #ED1B2E;
 }
 
 /* line 162, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .line-button:hover::before {
-  background: #009DFF;
+  background: #ED1B2E;
 }
 
 /* line 166, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .book_now {
   display: inline-block;
   font-size: 14px;
-  color: #009DFF;
-  border: 1px solid #009DFF;
+  color: #ED1B2E;
+  border: 1px solid #ED1B2E;
   text-transform: capitalize;
   padding: 10px 25px;
 }
 
 /* line 173, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_btn.scss */
 .book_now:hover {
-  background: #009DFF;
+  background: #ED1B2E;
   color: #fff;
 }
 
@@ -919,7 +926,7 @@ h3 {
 /* line 17, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_header.scss */
 .header-area .main-header-area {
   padding: 7px 0;
-  background: #fff;
+  background: #F5F5F5;
 }
 
 @media (max-width: 767px) {
@@ -4310,7 +4317,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
   background: #fff;
   line-height: 60px;
   font-size: 15px;
-  color: #009DFF;
+  color: #ED1B2E;
   display: inline-block;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -4466,7 +4473,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 213, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_offers.scss */
 .features_room .rooms_here .single_rooms .room_thumb .room_heading a:hover {
-  color: #009DFF;
+  color: #ED1B2E;
 }
 
 /* line 220, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_offers.scss */
@@ -4578,7 +4585,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 281, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_offers.scss */
 .forQuery .Query_border .phone_num a {
-  background: #009DFF;
+  background: #ED1B2E;
   color: #fff;
   padding: 12px 53px;
   border-radius: 30px;
@@ -4589,8 +4596,8 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 289, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_offers.scss */
 .forQuery .Query_border .phone_num a:hover {
-  color: #009DFF;
-  border: 1px solid #009DFF;
+  color: #ED1B2E;
+  border: 1px solid #ED1B2E;
   background: #fff;
 }
 
@@ -4741,13 +4748,13 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background: #F5F5F%;
+  background: #F5F5F5;
 }
 
 /* line 7, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_footer.scss */
 .footer .footer_top {
-  padding-top: 100px;
-  padding-bottom: 110px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 @media (max-width: 767px) {
@@ -5025,7 +5032,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 }
 
 .bradcam_bg_4 {
-  background-image: url(../img/banner/indonesia-eq.jpg);
+  background-image: url(../img/banner/10607-0107.JPG);
 }
 
 /* line 7, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_bradcam.scss */
@@ -5349,7 +5356,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 
 /* line 28, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_department.scss */
 .our_department_area .single_department .department_content h3 a:hover {
-  color: #5DB2FF;
+  color: #000000;
 }
 
 /* line 33, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_department.scss */
@@ -5425,7 +5432,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 /* line 1, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_service.scss */
 .service_area {
   background: #FFFFFF;
-  padding: 10px 0 90px 0;
+  padding: 10px 0 0px 0;
 }
 
 @media (max-width: 767px) {
@@ -5968,7 +5975,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
 /* line 75, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
 .sample-text-area {
   background: #fff;
-  padding: 20px 0 20px 0;
+  padding: 40px 0 0px 0;
 }
 
 /* line 80, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_elements.scss */
